After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721580 - Teleporters might disappear
Teleporters might disappear
Status: RESOLVED FIXED
Product: gnome-nibbles
Classification: Applications
Component: general
3.11.x
Other Linux
: Normal major
: ---
Assigned To: gnome-nibbles-maint
gnome-nibbles-maint
Depends on:
Blocks:
 
 
Reported: 2014-01-05 15:19 UTC by Michael Catanzaro
Modified: 2014-01-05 23:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Missing teleporters (42.73 KB, image/png)
2014-01-05 15:19 UTC, Michael Catanzaro
  Details
Stacktrace (18.95 KB, text/plain)
2014-01-05 15:31 UTC, Michael Catanzaro
  Details
Fix teleporters (1.03 KB, patch)
2014-01-05 16:01 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2014-01-05 15:19:10 UTC
Created attachment 265375 [details]
Missing teleporters

When I got to the first level with teleporters, none of the teleporters were drawn on the map.  They still function, though, they're just invisible. I see four critical warnings, one for each teleporter:

(gnibbles:23991): Clutter-Gtk-CRITICAL **: gtk_clutter_texture_set_from_pixbuf: assertion 'GDK_IS_PIXBUF (pixbuf)' failed

(gnibbles:23991): Clutter-Gtk-CRITICAL **: gtk_clutter_texture_set_from_pixbuf: assertion 'GDK_IS_PIXBUF (pixbuf)' failed

(gnibbles:23991): Clutter-Gtk-CRITICAL **: gtk_clutter_texture_set_from_pixbuf: assertion 'GDK_IS_PIXBUF (pixbuf)' failed

(gnibbles:23991): Clutter-Gtk-CRITICAL **: gtk_clutter_texture_set_from_pixbuf: assertion 'GDK_IS_PIXBUF (pixbuf)' failed

Unfortunately I don't have stack traces, and I haven't seen this before so I doubt it will be easy to reproduce -> severity minor.
Comment 1 Michael Catanzaro 2014-01-05 15:22:59 UTC
Ah they're missing on the next teleporter level, too (the one with the big X).
Comment 2 Michael Catanzaro 2014-01-05 15:31:03 UTC
Created attachment 265377 [details]
Stacktrace

It's happening always; here's a stacktrace.
Comment 3 Michael Catanzaro 2014-01-05 15:51:45 UTC
dc16e15c9872daa532ad9b72e2e5e7969bd46973 is the first bad commit
commit dc16e15c9872daa532ad9b72e2e5e7969bd46973
Author: Bryan Quigley <bryanquigs@src.gnome.org>
Date:   Sun Oct 20 23:33:17 2013 -0400

    Removed blank and unused bonus


This one didn't compile, but the next commit "A few blank-unused lines" does and is broken.
Comment 4 Michael Catanzaro 2014-01-05 16:01:54 UTC
Created attachment 265380 [details] [review]
Fix teleporters

The teleporters became invisible due to an off-by-one introduced because
the index into our array of pixbufs for the teleporters is defined
separately from all the other indices. Fix the index and relocate its
definition.
Comment 5 gQuigs 2014-01-05 22:19:14 UTC
Review of attachment 265380 [details] [review]:

Looks good to me!  Sorry I missed that..
Comment 6 Michael Catanzaro 2014-01-05 23:10:05 UTC
Attachment 265380 [details] pushed as 1c88b68 - Fix teleporters