Fix teleporters

The teleporters became invisible due to an off-by-one introduced because
the index into our array of pixbufs for the teleporters is defined
separately from all the other indices. Fix the index and relocate its
definition.

https://bugzilla.gnome.org/show_bug.cgi?id=721580